--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
     "csvtojson": "^2.0.10",
     "i": "^0.3.7",
     "npm": "^11.0.0",
